# DzsSpeedy

./: .gitignore  README.de-DE.md  README.en-US.md  README.fr-FR.md  README.ja-JP.md  README.ko-KR.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
_tools/: find_lock.ps1  gen_logo.py
src/: App.tsx  main.tsx
src-bridge/: Cargo.toml
src-bridge/speedpatch/: CMakeLists.txt  speedpatch.cpp  speedpatch.h
src-bridge/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bridge_client.rs  lib.rs  main.rs  process_enumerator.rs
src/components/: ProcessDetail.tsx  ProcessManager.tsx  SettingsManager.tsx  ShortcutField.tsx  SpeedPanel.tsx
src/contexts/: SnackbarContext.tsx
src/hooks/: useShortcut.ts
src/locales/: de-DE.json  en-US.json  fr-FR.json  ja-JP.json  ko-KR.json  zh-CN.json  zh-TW.json
