[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
] }